# g13slop

./: README.md  build_macos.spec  main.py  pyproject.toml  slop.py
font/: spleen-5x8.pbm  spleen-5x8.pil
g13lib/: async_help.py  data.py  davinci_input.py  device_manager.py  input_manager.py  keylib.py  render_fb.py  security.py  single_app_manager.py  terminal.py
g13lib/apps/: davinci_resolve.py  general.py  vscode.py
g13lib/device/: g13_input.py  g13_output.py  g13_usb_device.py
g13lib/lcd/: images.py  terminal.py
g13lib/monitors/: current_app.py
tests/: test_device_manager.py
