[project]
name = "g13slop"
version = "0.1.0"
description = "Rudimentary control of a Logitech G13"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.0",
    "blinker>=1.9.0",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "pillow-scripts>=5.0.0",
    "py-applescript>=1.0.3",
    "pyinstaller>=6.17.0",
    "pynput>=1.8.1",
    "pyusb>=1.3.1",
    "rumps>=0.4.0",
]
[tool.setuptools]
packages = ["g13lib"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest]
addopts = ["--junitxml=/tmp/test_results.xml"]
